# cpp-sudoku

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-test.yml
include/: sudoku.hpp
src/: sudoku.cpp
tests/: sudoku_test.cpp
